--- a/sidebar.css
+++ b/sidebar.css
@@ -3,12 +3,17 @@
     width: 60px;
     height: 60px;
     top: 0;
-    right: -60px;
+    right: -61px;
+    border-radius: 2px;
+    background-color:#6a983c;
+    border: 2px solid #46760a ;
+    color: white;
 }
 
 .sidebar {
     background: white;
     z-index: 1;
+    border-radius: 2px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -18,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid black;
+    border: 2px solid #46760a;
     padding-left: 45px;
   }
 
@@ -37,7 +42,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid black;
+    border: 2px solid #46760a;
     padding-left: 45px;
     left: -100%;
     position: fixed;
@@ -55,6 +60,12 @@
     border: 2px solid #46760a;
     border-radius: 2px;
     color: white;
+    width: 60px;
+    height: 60px;
+    top: 0;
+    right: -61px;
+    border: 2px solid #46760a ;
+    
   }
 }
 
@@ -64,16 +75,23 @@
   padding-bottom: 12px;
 }
 .Categories__links {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  max-width: 300px;
+  width: 100%;
   font-size: 14;
   font-weight: 400;
-  gap: 12px;
+  column-gap: 138px;
+  row-gap: 12px;
 }
 .Categories__links a {
   text-decoration: none;
   color: black;
 }
+.Categories__links__b{
+right: 0;
+}
+
 .Brands {
   display: flex;
   flex-direction: column;
@@ -84,7 +102,81 @@
 .Brands__header {
   font-size: 18px;
   font-weight: 600;
+  
 }
+/* The container */
+.checkbox__container {
+  display: block;
+  position: relative;
+  padding-left: 40px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox__container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  border: 1.5px solid #D1D1D1;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox__container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a green background */
+.checkbox__container input:checked ~ .checkmark {
+  background-color: #6A983C;
+  border: 1.5px solid #46760A;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox__container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox__container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+
+
 .Rating {
   display: flex;
   flex-direction: column;
@@ -170,11 +262,25 @@ input[type="range"]::-moz-range-thumb {
   pointer-events: auto;
   border: none;
 }
-.slider button {
+.apply__button{
   background-color: #6a983c;
   border: 2px solid #46760a;
   border-radius: 12px;
   width: 78px;
   height: 48px;
   color: white;
+  font-size: 15px;
+  font-weight: 700;
+ 
 }
+.reset__button{
+    background-color: #ffffff;
+    border: none;
+    color: #A9A9A9;
+    position: absolute;
+    width: 78px;
+    height: 48px;
+    font-size: 15px;
+    font-weight: 700;
+    margin-left: 30px;
+  }
