--- a/style1.css
+++ b/style1.css
@@ -1,383 +1,554 @@
+.body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1260px;
+  height: 130px;
+}
+.web-name {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  font-size: 25px;
+  font-family: cursive;
+  display: flex;
+  align-items: center;
+}
+.cart-icon {
+  grid-column-start: 2;
+  grid-row-end: 2;
+  display: flex;
+  align-items: center;
+}
+.nav-bar {
+  display: flex;
+  gap: 40px;
+  width: 100%;
+  max-width: 1260px;
+  padding: 15px 45px;
+  font-size: 15px;
+  background-color: #f9f9f9;
+}
 
-.body{
+.link {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.directory {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-end: 2;
+  font-size: 12px;
+
+  padding-top: 15.5px;
+  padding-bottom: 15.5px;
+}
+.page-header {
+  display: grid;
+  grid-template-columns: 3fr 20fr 2fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 100%;
+  max-width: 1260px;
+}
+.page-name {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  font-size: 32px;
+  font-weight: 600;
+  font-family: cursive;
+
+  padding-bottom: 8px;
+  padding-top: 8px;
+}
+.product-amount {
+  grid-column-start: 3;
+  grid-row-start: 2;
+}
+.product-contained {
+  grid-column-start: 4;
+  grid-row-start: 2;
+}
+.Applied-filters {
+  grid-column-start: 1;
+  grid-row-start: 3;
+  font-size: 12px;
+
+  padding-top: 16px;
+  padding-bottom: 16px;
+  gap: 12px;
+  color: #a9a9a9;
+  font-family: cursive;
+}
+.selected-filters {
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  font-size: 12px;
+}
+
+@media only screen and (min-width: 768px) {
+  .product-page {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .product-page {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1260px;
-    height: 130px;
-}
-.web-name{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    font-size: 25px;
-    font-family: cursive;
-    display: flex;
-    align-items: center;
-}
-.cart-icon{
-    grid-column-start: 2;
-    grid-row-end: 2;
-    display: flex;
-    align-items: center;
-}
-.nav-bar{
-    display:flex;
-    gap: 40px;
-    width: 100%;
-    max-width: 1260px;
-    padding: 15px 45px ;
-    font-size: 15px;
-    background-color: #F9F9F9;
+  }
 }
 
-.link{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.directory{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-end: 2;
-    font-size: 12px;
-
-    padding-top: 15.5px;
-    padding-bottom: 15.5px;
-}
-.page-header{
- display: grid;
- grid-template-columns: 3fr 20fr 2fr 2fr;
- grid-template-rows: 1fr 1fr 1fr;
- width: 100%;
- max-width: 1260px;
-}
-.page-name{
-    grid-column-start: 1;
-    grid-column-end:3 ;
-    grid-row-start: 2;
-    font-size: 32px;
-    font-weight: 600;
-    font-family: cursive;
-
-    padding-bottom: 8px;
-    padding-top: 8px;
-}
-.product-amount{
-    grid-column-start: 3;
-    grid-row-start: 2;
-}
-.product-contained{
-    grid-column-start: 4;
-    grid-row-start: 2;
-}
-.Applied-filters{
-    grid-column-start: 1;
-    grid-row-start: 3;
-    font-size: 12px;
-
-    padding-top: 16px;
-    padding-bottom: 16px;
-    gap: 12px;
-    color:#A9A9A9 ;
-    font-family: cursive;
-}
-.selected-filters{
-    grid-column-start: 2;
-    grid-column-end: 5;
-    grid-row-start: 3;
-    font-size: 12px;
+/* side bar */
+.close-button {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 0;
+  right: -61px;
+  border-radius: 2px;
+  background-color: #6a983c;
+  border: 2px solid #46760a;
+  color: white;
 }
 
+.sidebar {
+  background: white;
+  z-index: 1;
+  border-radius: 2px;
+}
 
-@media only screen and (min-width: 768px){
-    .product-page{
-display: grid;
-grid-template-columns:1fr 3fr;}}
-@media only screen and (max-width: 768px){
-    .product-page{
-display: flex;
-flex-direction: column;
-}}
-
-                                                                            /* side bar */
-.sidebar{
-    width: 300px; ;
-    height: 1304px; ;
+@media only screen and (min-width: 768px) {
+  .sidebar {
+    width: 300px;
+    height: 1304px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding-left: 45px;
+  }
+
+  .Toggle {
+    display: none;
+  }
+
+  .close-button {
+    display: none;
+  }
 }
 
-
-
-
-.Rating{
-    font-size: 13px;
-  
-}
-
-
-
-
-
-h1{
-   font-size: 18px;
-
-}
-p{
-    font-size: 14px;
-    line-height: 19px;
-
-}
-a{
-    text-align:end;
-}
-.price-input{
-    width: 100%;
+@media only screen and (max-width: 768px) {
+  .sidebar {
+    width: 300px;
+    height: 100vh;
     display: flex;
-    margin-top: 30px;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 2px solid #46760a;
+    padding-left: 45px;
+    left: -100%;
+    position: fixed;
+    top: 0%;
+  }
+
+  .sidebar.is-active {
+    left: 0;
+  }
+
+  .Toggle {
+    display: block;
+    position: relative;
+    padding-top: 10px;
+  }
+  .Toggle button {
+    background-color: #6a983c;
+    border: 2px solid #46760a;
+    border-radius: 2px;
+    color: white;
+    width: 60px;
+    height: 60px;
+    top: 0;
+    right: -61px;
+    border: 2px solid #46760a;
+  }
 }
-.price-input .field{
-    height: 45px;
-    width: 100%;
-    align-items: center;
-    font-family: cursive;
+
+.Categories__header {
+  font-size: 18px;
+  font-weight: 600;
+  padding-bottom: 12px;
 }
-.field input{
-    width: 100%;
-    height: 100%;
-    border: 1px solid#D1D1D1;
-    outline: none;
-    border-radius: 15px;
-    text-align: center;
-    font-size: 14px;
-    -moz-appearance: none;
+.Categories__links {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  max-width: 300px;
+  width: 100%;
+  font-size: 14;
+  font-weight: 400;
+  column-gap: 138px;
+  row-gap: 12px;
+}
+.Categories__links a {
+  text-decoration: none;
+  color: black;
+}
+.Categories__links__b {
+  right: 0;
+}
+
+.Brands {
+  display: flex;
+  flex-direction: column;
+  font-size: 14;
+  font-weight: 400;
+  gap: 12px;
+}
+.Brands__header {
+  font-size: 18px;
+  font-weight: 600;
+}
+/* The container */
+.checkbox__container {
+  display: block;
+  position: relative;
+  padding-left: 40px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox__container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  border: 1.5px solid #d1d1d1;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox__container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a green background */
+.checkbox__container input:checked ~ .checkmark {
+  background-color: #6a983c;
+  border: 1.5px solid #46760a;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox__container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox__container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.Rating {
+  display: flex;
+  flex-direction: column;
+  font-size: 14;
+  font-weight: 400;
+  gap: 12px;
+}
+.Rating__header {
+  font-weight: 600;
+  font-size: 18px;
+}
+.price-input {
+  width: 100%;
+  display: flex;
+  margin-top: 30px;
+}
+.price-input .field {
+  height: 45px;
+  width: 100%;
+  align-items: center;
+}
+.field input {
+  width: 100%;
+  height: 100%;
+  border: 1px solid#D1D1D1;
+  outline: none;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 14px;
+  -moz-appearance: none;
 }
 input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button{
-    -webkit-appearance: none;
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
-.price-input .separator{
-    height: 100px;
-    width: 100px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+.price-input .separator {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 14px;
 }
-.slider{
-    width: 251px;
-    border-radius: 12px;
-    background-color:white
-
+.slider {
+  width: 251px;
+  border-radius: 12px;
+  background-color: white;
 }
-.slider .progress{
-    height: 5px;
-    background-color:#19b94f;
-    border-radius: 12px;
-    left: 50px;
-    right: 50px;
+.slider .progress {
+  height: 5px;
+  background-color: #19b94f;
+  border-radius: 12px;
+  left: 50px;
+  right: 50px;
 }
-.range-input{
-    position: relative;
+.range-input {
+  position: relative;
 }
-.range-input input{
-    top: -5px;
-    height: 5px;
-    width: 100%;
-    pointer-events: none;
-    -webkit-appearance: none;
-    background: none;
-    position: absolute;
+.range-input input {
+  top: -5px;
+  height: 5px;
+  width: 100%;
+  pointer-events: none;
+  -webkit-appearance: none;
+  background: none;
+  position: absolute;
 }
-input[type="range"]::-webkit-slider-thumb{
-    width: 20px;
-    height: 20px;
-    -webkit-appearance: none;
-    border-radius: 50%;
-    border: 1px solid #D1D1D1;
-    background-color: #FFFFFF;
-    pointer-events: auto;
+input[type="range"]::-webkit-slider-thumb {
+  width: 20px;
+  height: 20px;
+  -webkit-appearance: none;
+  border-radius: 50%;
+  border: 1px solid #d1d1d1;
+  background-color: #ffffff;
+  pointer-events: auto;
 }
-input[type="range"]::-moz-range-thumb{
-    height: 20px;
-    width: 20px;
-    -moz-appearance: none;
-    border-radius: 50%;
-    background-color: #ff0000 ;
-    pointer-events: auto;
-    border: none;
+input[type="range"]::-moz-range-thumb {
+  height: 20px;
+  width: 20px;
+  -moz-appearance: none;
+  border-radius: 50%;
+  background-color: #ff0000;
+  pointer-events: auto;
+  border: none;
 }
-.slider button{
-    background-color:#6A983C;
-    border: 2px solid #46760A;
-    border-radius: 12px;
-    width: 78px;
-    height: 48px;
-    color: white;
+.apply__button {
+  background-color: #6a983c;
+  border: 2px solid #46760a;
+  border-radius: 12px;
+  width: 78px;
+  height: 48px;
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
 }
-                                                                            /*9 pictures*/
- @media only screen and (min-width: 768px){
-.productcontainer {
+.reset__button {
+  background-color: #ffffff;
+  border: none;
+  color: #a9a9a9;
+  position: absolute;
+  width: 78px;
+  height: 48px;
+  font-size: 15px;
+  font-weight: 700;
+  margin-left: 30px;
+}
+/*9 pictures*/
+@media only screen and (min-width: 768px) {
+  .productcontainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 50px;
+  }
 }
- }
- @media only screen and (max-width: 768px){
-    .productcontainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-    }
-     }
+@media only screen and (max-width: 768px) {
+  .productcontainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+}
 .product {
-    border: 1px solid black;
-    height: 323px;
-    max-width: 270px;
-    border-radius: 12px;
-    display:grid;
-    grid-template-columns: 135px 135px;
-    grid-template-rows: 212px 30px 26px 20px 23px;
+  border: 1px solid black;
+  height: 323px;
+  max-width: 270px;
+  border-radius: 12px;
+  display: grid;
+  grid-template-columns: 135px 135px;
+  grid-template-rows: 212px 30px 26px 20px 23px;
 }
 img {
-    border-radius: 12px;
+  border-radius: 12px;
 }
 .picture {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    display:flex;
-    justify-content: center;
-    padding: 16px;
-    border-radius: 12px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  border-radius: 12px;
 }
 .product-name {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    font-size: 15px;
-    font-weight: bold;
-    padding-left: 16px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  font-size: 15px;
+  font-weight: bold;
+  padding-left: 16px;
 }
 .product-description {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    font-size: 12px;
-    padding-left: 16px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  font-size: 12px;
+  padding-left: 16px;
 }
 .price {
-    grid-column-start: 1;
-    font-size: 18px;
-    padding-left: 16px;
-    font-weight: bolder;
+  grid-column-start: 1;
+  font-size: 18px;
+  padding-left: 16px;
+  font-weight: bolder;
 }
 .old-price {
-    grid-column-start: 1;
-    font-size: 12px;
-    padding-left: 16px;
+  grid-column-start: 1;
+  font-size: 12px;
+  padding-left: 16px;
 }
 .buy-now {
-        grid-column-start: 2;
-    grid-row-start: 4;
-    grid-row-end:6;
-    display:flex;
-    justify-content: right;
-    padding-right: 16px;
+  grid-column-start: 2;
+  grid-row-start: 4;
+  grid-row-end: 6;
+  display: flex;
+  justify-content: right;
+  padding-right: 16px;
 }
 .buybutton {
-    font-size: 15px;
-    color: white;
-    border-radius: 12px;
-    background-color:#6A983C ;
-    border: 1px solid green;
-    width: 90px;
-    height: 36px;
+  font-size: 15px;
+  color: white;
+  border-radius: 12px;
+  background-color: #6a983c;
+  border: 1px solid green;
+  width: 90px;
+  height: 36px;
 }
-.buybutton:hover{
-    background-color: aqua;
-    color: white;
+.buybutton:hover {
+  background-color: aqua;
+  color: white;
 }
-.navigation{
-display: flex;
-justify-content: space-between;
-max-width: 1260px;
-width: 100%;
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1260px;
+  width: 100%;
 }
-button{
-      background-color: #f5f5f5;
-      border-style: none;
-      height: 25px;
-      border-radius: 100px;
-      margin-block: 10px;
-      margin-right: 10px;
-      font-family: cursive;
-      font-weight: bold;
-      font-size: 14px;
-    }
+button {
+  background-color: #f5f5f5;
+  border-style: none;
+  height: 25px;
+  border-radius: 100px;
+  margin-block: 10px;
+  margin-right: 10px;
+  font-family: cursive;
+  font-weight: bold;
+  font-size: 14px;
+}
 
-@media only screen and (min-width: 768px){ 
-    .footer{
-        display:grid;
-        padding-top: 20px;
-        grid-template-columns: 1fr 1fr 1fr 1fr ;
-        grid-template-rows: 160px 30px 40px;
-        width: 100%;
-        max-width: 1260px;
-    }}
-    @media only screen and (max-width: 768px){ 
-    .footer{
-        display:flex;
-        padding-top: 20px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        max-width: 1260px;
-    }}
-    .footer-title{
-        font-size: 18px;
-        font-weight: 600;
-    }
-    .footer-tags{ 
-        font-size: 18px;
-        font-weight: 600;
-        grid-column-start: 1;
-        grid-column-end: 3;
-    }
-    .button-tags {
-        grid-column-start: 1;
-        grid-column-end: 5;
-    }
-    .button-tags button{
-          background-color: #f5f5f5;
-          border-style: none;
-          height: 25px;
-          border-radius: 12px;
-          margin-right: 10px;
-          font-family: cursive;
-          font-weight: bold;
-          font-size: 12px;
-        }
-    ul{
-        list-style-type: none;
-        margin-top: 15px;
-        padding: 0;
-        line-height: 19px;
-        font-weight: 400;
-        font-size: 14px;
-    }
-    a{  
-        text-decoration: none;
-        color: #6A983C;
-    }
+@media only screen and (min-width: 768px) {
+  .footer {
+    display: grid;
+    padding-top: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 160px 30px 40px;
+    width: 100%;
+    max-width: 1260px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .footer {
+    display: flex;
+    padding-top: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1260px;
+  }
+}
+.footer-title {
+  font-size: 18px;
+  font-weight: 600;
+}
+.footer-tags {
+  font-size: 18px;
+  font-weight: 600;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.button-tags {
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+.button-tags button {
+  background-color: #f5f5f5;
+  border-style: none;
+  height: 25px;
+  border-radius: 12px;
+  margin-right: 10px;
+  font-family: cursive;
+  font-weight: bold;
+  font-size: 12px;
+}
+ul {
+  list-style-type: none;
+  margin-top: 15px;
+  padding: 0;
+  line-height: 19px;
+  font-weight: 400;
+  font-size: 14px;
+}
+a {
+  text-decoration: none;
+  color: #6a983c;
+}
